--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-12">
-            <h1 class="text-4xl font-bold text-slate-900 mb-4">🏛️ ข้อมูลสมาชิกพรรคการเมือง</h1>
+            <h1 class="text-4xl font-bold text-slate-900 mb-4">🏛️ ข้อมูลสมาชิกพรรคการเมืองจำลอง</h1>
             <p class="text-slate-500">จัดการข้อมูลผ่าน Google Sheets แบบ Real-time</p>
         </header>
 
